<resources>
    <string name="app_name">HBTU Notice Board</string>
    <string name="login">LOG IN</string>
    <string name="SignUp">REGISTER</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="haveaccount">Register Your Account</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
